k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oficina-mecanica
  labels:
    app.kubernetes.io/name: oficina-mecanica
    app.kubernetes.io/part-of: oficina-mecanica
