k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-api
  labels:
    app.kubernetes.io/name: oficina-mecanica
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oficina-mecanica
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http # containerPort 3000 do Deployment
      protocol: TCP
